Add support for serving of static assets.

--- a/static/index.html
+++ b/static/index.html
@@ -6,6 +6,6 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
-    <h1 class="text-3xl font-bold underline">_</h1>
+    <h1 class="text-3xl font-bold underline">ไม่เป็น</h1>
   </body>
 </html>
